--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="pt-BR">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport"
-      content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <title>Mapa de Clientes - Google Maps</title>
 
 <style>
@@ -13,9 +12,7 @@
         height:100%;
         width:100%;
         font-family:sans-serif;
-        overflow:hidden;
     }
-
     #map{
         height:100%;
         width:100%;
@@ -23,7 +20,6 @@
         top:0;left:0;
     }
 
-    /* BOTÕES */
     .map-control{
         position:fixed;
         top:90px;
@@ -48,208 +44,238 @@
     .control-btn:active{
         transform:scale(.9);
     }
+
+    /* Marcador da localização */
+    .location-marker {
+        width: 20px;
+        height: 20px;
+        background: #4285f4;
+        border: 3px solid white;
+        border-radius: 50%;
+        box-shadow: 0 2px 6px rgba(0,0,0,0.4);
+        position: relative;
+    }
+
+    .location-marker::after {
+        content: '';
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 8px;
+        height: 8px;
+        background: white;
+        border-radius: 50%;
+    }
+
+    /* Animação */
+    @keyframes pulse {
+        0% { box-shadow: 0 0 0 0 rgba(66,133,244,0.7); }
+        70% { box-shadow: 0 0 0 10px rgba(66,133,244,0); }
+        100% { box-shadow: 0 0 0 0 rgba(66,133,244,0); }
+    }
+
+    .location-marker.active {
+        animation: pulse 2s infinite;
+    }
+
+    @media (max-width: 768px) {
+        .map-control {
+            top: 70px;
+            right: 10px;
+        }
+
+        .control-btn {
+            width: 44px;
+            height: 44px;
+            font-size: 16px;
+        }
+    }
 </style>
 </head>
 <body>
 
 <div id="map"></div>
 
-<!-- BOTÕES -->
 <div class="map-control">
     <button id="btnToggle3D" class="control-btn">3D</button>
-    <button id="btnCenterUser" class="control-btn">📍</button>
 </div>
 
 <!-- Supabase -->
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
 <script>
-const SUPABASE_URL = "https://fufteldeapyvluynppuv.supabase.co";
-const SUPABASE_ANON_KEY =
-"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImZ1ZnRlbGRlYXB5dmx1eW5wcHV2Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjQ2MzAyMzIsImV4cCI6MjA4MDIwNjIzMn0.xr6PiskP8cJUzGBEhp_tAfZWMprxJXJyhLuOSmCQleA";
+    const SUPABASE_URL = "https://fufteldeapyvluynppuv.supabase.co";
+    const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImZ1ZnRlbGRlYXB5dmx1eW5wcHV2Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjQ2MzAyMzIsImV4cCI6MjA4MDIwNjIzMn0.xr6PiskP8cJUzGBEhp_tAfZWMprxJXJyhLuOSmCQleA";
 
-const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+    /* Recomendação de segurança:
+       - Ativar RLS no supabase
+       - Restringir permissões
+       - Idealmente retirar operações críticas do frontend
+    */
+    const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 </script>
 
 <!-- Google Maps -->
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyApaDb9rSw2sNTaY7fjBqmrgjWYD9xwjcU&callback=initMap&v=beta"
-        async defer></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyApaDb9rSw2sNTaY7fjBqmrgjWYD9xwjcU&callback=initMap&v=beta&libraries=places" async defer></script>
 
 <script>
 let map;
-let userMarker = null;
-let watchId = null;
-let useGyro = false;
-let currentHeading = 0;
 let is3D = false;
-let animating3D = false;
+let userLocationMarker = null;
+let watchId = null;
+let _animating3D = false;
 
 const MAP_ID = "ebb7ca4503045feabc75b373";
 
-/* =====================================================
-   ÍCONE OFICIAL: BOLINHA AZUL DO GOOGLE MAPS
-===================================================== */
-const BLUE_DOT_ICON = {
-    url: "data:image/svg+xml;utf-8," +
-         "<svg width='32' height='32' viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'>" +
-         "<circle cx='16' cy='16' r='8' fill='%231A73E8' stroke='%23FFFFFF' stroke-width='4'/></svg>",
-    scaledSize: new google.maps.Size(32, 32),
-    anchor: new google.maps.Point(16, 16)
-};
+window.initMap = function () {
+    map = new google.maps.Map(document.getElementById("map"), {
+        center:{lat:-23.5505,lng:-46.6333},
+        zoom:17,
+        mapId:MAP_ID,
+        tilt:0,
+        heading:0,
+        gestureHandling:"greedy",
+        rotateControl:true,
+        zoomControl:true,
+        streetViewControl:false,
+        fullscreenControl:true
+    });
 
-/* =====================================================
-   GIROSCÓPIO
-===================================================== */
-function enableGyro() {
-    if (window.DeviceOrientationEvent &&
-        typeof DeviceOrientationEvent.requestPermission === "function") {
-
-        DeviceOrientationEvent.requestPermission().then(res=>{
-            if (res === "granted") {
-                useGyro = true;
-                window.addEventListener("deviceorientation", onGyro);
-            }
-        });
-
-    } else {
-        useGyro = true;
-        window.addEventListener("deviceorientation", onGyro);
-    }
+    startLocationTracking();
 }
 
-function onGyro(ev){
-    if (!useGyro) return;
-    if (ev.alpha != null) {
-        currentHeading = ev.alpha;
-        map.setHeading(currentHeading);
+/* ===========================
+   RASTREAMENTO EM TEMPO REAL
+   =========================== */
+
+function startLocationTracking() {
+    if (!navigator.geolocation) {
+        alert("Seu navegador não suporta geolocalização.");
+        return;
     }
-}
 
-/* =====================================================
-   ANIMAÇÃO SUAVE
-===================================================== */
-function lerp(a,b,t){ return a+(b-a)*t; }
+    const markerDiv = document.createElement('div');
+    markerDiv.className = 'location-marker active';
 
-function animateMarkerTo(marker,newPos,duration=450){
-    const start = marker.getPosition();
-    const sLat = start.lat();
-    const sLng = start.lng();
-    const eLat = newPos.lat();
-    const eLng = newPos.lng();
-
-    const t0 = performance.now();
-
-    function step(t){
-        const p = Math.min((t-t0)/duration,1);
-        const lat = lerp(sLat,eLat,p);
-        const lng = lerp(sLng,eLng,p);
-        marker.setPosition({lat,lng});
-        if (p < 1) requestAnimationFrame(step);
-    }
-    requestAnimationFrame(step);
-}
-
-/* =====================================================
-   GPS
-===================================================== */
-function startGPS(){
-    if (!navigator.geolocation) return;
-
-    const opt = {
-        enableHighAccuracy:true,
-        timeout:10000,
-        maximumAge:0
+    const geoOptions = {
+        enableHighAccuracy: true,
+        timeout: 7000,
+        maximumAge: 0
     };
 
-    navigator.geolocation.getCurrentPosition(pos=>{
-        const c = {lat:pos.coords.latitude,lng:pos.coords.longitude};
+    navigator.geolocation.getCurrentPosition(
+        pos => {
+            const c = { lat: pos.coords.latitude, lng: pos.coords.longitude };
 
-        map.setCenter(c);
-        map.setZoom(17);
+            map.setCenter(c);
+            map.setZoom(17);
 
-        userMarker = new google.maps.Marker({
-            map,
-            position:c,
-            icon: BLUE_DOT_ICON
-        });
+            if (google.maps.marker?.AdvancedMarkerElement) {
+                userLocationMarker = new google.maps.marker.AdvancedMarkerElement({
+                    map,
+                    position: c,
+                    content: markerDiv,
+                    title: "Sua Localização"
+                });
+            } else {
+                userLocationMarker = new google.maps.Marker({
+                    map,
+                    position: c,
+                    title: "Sua Localização",
+                    icon: {
+                        path: google.maps.SymbolPath.CIRCLE,
+                        scale: 8,
+                        fillColor: "#4285f4",
+                        fillOpacity: 1,
+                        strokeColor: "white",
+                        strokeWeight: 3
+                    }
+                });
+            }
 
-        watchId = navigator.geolocation.watchPosition(updateUser,()=>{},opt);
-
-    },()=>{},opt);
+            watchId = navigator.geolocation.watchPosition(updateUserLocation, handleGeoError, geoOptions);
+        },
+        handleGeoError,
+        geoOptions
+    );
 }
 
-function updateUser(pos){
-    const c = new google.maps.LatLng(pos.coords.latitude,pos.coords.longitude);
-    animateMarkerTo(userMarker,c);
-    map.panTo(c);
+function updateUserLocation(position) {
+    const newPos = new google.maps.LatLng(
+        position.coords.latitude,
+        position.coords.longitude
+    );
 
-    if (!useGyro && pos.coords.heading != null){
-        map.setHeading(pos.coords.heading);
+    if (!userLocationMarker) return;
+
+    if (userLocationMarker.setPosition) {
+        userLocationMarker.setPosition(newPos);
+    } else {
+        userLocationMarker.position = newPos;
     }
 }
 
-/* =====================================================
-   CENTRALIZAR
-===================================================== */
-function centerUser(){
-    if (!userMarker) return;
-    map.panTo(userMarker.getPosition());
-}
-document.getElementById("btnCenterUser").onclick = centerUser;
+function handleGeoError(error) {
+    console.warn("Erro de geolocalização:", error);
 
-/* =====================================================
-   MODO 2D / 3D
-===================================================== */
-function animateValue(start,end,dur,onUpdate,onFinish){
-    const t0 = performance.now();
-    function frame(t){
-        const p = Math.min((t-t0)/dur,1);
-        onUpdate(start+(end-start)*p);
-        if (p < 1) requestAnimationFrame(frame);
-        else if (onFinish) onFinish();
+    alert("Não foi possível acessar a localização. Ative o GPS e recarregue.");
+
+    map.setCenter({ lat:-23.5505, lng:-46.6333 });
+}
+
+/* ===========================
+   ANIMAÇÃO 2D ⇄ 3D
+   =========================== */
+
+function animateValue(start, end, duration, onUpdate, onFinish){
+    const startTime = performance.now();
+
+    function frame(time){
+        const progress = Math.min((time - startTime) / duration, 1);
+        const value = start + (end - start) * progress;
+
+        onUpdate(value);
+
+        if(progress < 1){
+            requestAnimationFrame(frame);
+        } else {
+            if (onFinish) onFinish();
+        }
     }
+
     requestAnimationFrame(frame);
 }
 
-document.getElementById("btnToggle3D").onclick = ()=>{
-    if (animating3D) return;
-    animating3D = true;
+document.getElementById("btnToggle3D").onclick = () => {
 
-    if (!is3D){
+    if (_animating3D) return;
+    _animating3D = true;
+
+    if (!is3D) {
         is3D = true;
         btnToggle3D.textContent = "2D";
 
-        animateValue(map.getTilt(),67,700,val=>map.setTilt(val));
-        animateValue(map.getHeading(),45,700,val=>map.setHeading(val),
-            ()=>animating3D=false);
+        animateValue(map.getTilt(), 67, 600, val => map.setTilt(val));
+        animateValue(map.getHeading(), 45, 600, val => map.setHeading(val), () => {
+            _animating3D = false;
+        });
 
     } else {
         is3D = false;
         btnToggle3D.textContent = "3D";
 
-        animateValue(map.getTilt(),0,700,val=>map.setTilt(val));
-        animateValue(map.getHeading(),0,700,val=>map.setHeading(val),
-            ()=>animating3D=false);
+        animateValue(map.getTilt(), 0, 600, val => map.setTilt(val));
+        animateValue(map.getHeading(), 0, 600, val => map.setHeading(val), () => {
+            _animating3D = false;
+        });
     }
 };
 
-/* =====================================================
-   INICIAR MAPA
-===================================================== */
-function initMap(){
-    map = new google.maps.Map(document.getElementById("map"),{
-        center:{lat:-23.55,lng:-46.63},
-        zoom:17,
-        tilt:0,
-        heading:0,
-        mapId:MAP_ID,
-        gestureHandling:"greedy",
-        streetViewControl:false
-    });
-
-    enableGyro();
-    startGPS();
-}
+window.addEventListener('beforeunload', () => {
+    if (watchId) navigator.geolocation.clearWatch(watchId);
+});
 </script>
+
 </body>
 </html>
