--- a/index.html
+++ b/index.html
@@ -602,34 +602,49 @@
         transform: scale(0.95);
     }
 
-    .btn-start-camera {
-        width: 100%;
+    .address-display {
+        margin-bottom: 24px;
         padding: 16px;
-        background: var(--primary-color);
-        color: white;
-        border: none;
+        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
         border-radius: 12px;
-        font-size: 16px;
-        font-weight: 600;
-        cursor: pointer;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        gap: 10px;
-        transition: all 0.2s ease;
-    }
-
-    .btn-start-camera:hover {
-        background: #3367d6;
-        transform: translateY(-1px);
-    }
-
-    .btn-start-camera:active {
-        transform: translateY(0);
-    }
-
-    .btn-start-camera.hidden {
+        color: white;
         display: none;
+        animation: slideIn 0.3s ease-out;
+    }
+
+    .address-display.active {
+        display: block;
+    }
+
+    @keyframes slideIn {
+        from {
+            opacity: 0;
+            transform: translateY(-10px);
+        }
+        to {
+            opacity: 1;
+            transform: translateY(0);
+        }
+    }
+
+    .address-label {
+        font-size: 12px;
+        font-weight: 600;
+        text-transform: uppercase;
+        letter-spacing: 0.5px;
+        opacity: 0.9;
+        margin-bottom: 8px;
+    }
+
+    .address-text {
+        font-size: 15px;
+        font-weight: 500;
+        line-height: 1.5;
+    }
+
+    .address-icon {
+        font-size: 20px;
+        margin-right: 8px;
     }
 
     .qr-status {
@@ -902,14 +917,9 @@
         <div class="modal-body">
             <!-- Scanner QR Code -->
             <div class="qr-scanner-section">
-                <div class="scanner-title">📸 Escanear QR Code do Pacote</div>
+                <div class="scanner-title">📸 Aponte a câmera para o QR Code</div>
 
-                <button class="btn-start-camera" id="btn-start-camera">
-                    <span>📷</span>
-                    <span>Abrir Câmera</span>
-                </button>
-
-                <div class="qr-camera-container" id="qr-camera-container">
+                <div class="qr-camera-container active" id="qr-camera-container">
                     <video id="qr-video" autoplay playsinline></video>
                     <canvas id="qr-canvas"></canvas>
 
@@ -927,24 +937,16 @@
                         <button class="camera-btn" id="btn-switch-camera" title="Trocar câmera">🔄</button>
                     </div>
                 </div>
+            </div>
 
-                <div class="qr-result" id="qr-result">
-                    <div class="qr-result-text" id="qr-result-text"></div>
-                </div>
+            <!-- Display do Endereço -->
+            <div class="address-display" id="address-display">
+                <div class="address-label">📍 Endereço do Cliente</div>
+                <div class="address-text" id="address-text"></div>
             </div>
 
             <!-- Formulário -->
             <form id="form-add-client">
-                <div class="form-group">
-                    <label class="form-label" for="input-address">Endereço *</label>
-                    <textarea
-                        class="form-input form-textarea"
-                        id="input-address"
-                        placeholder="Será preenchido automaticamente pelo QR Code"
-                        readonly
-                        required
-                    ></textarea>
-                </div>
 
                 <div class="form-group">
                     <label class="form-label" for="input-name">Nome do Cliente *</label>
@@ -1385,17 +1387,13 @@ const btnCancel = document.getElementById('btn-cancel');
 const btnSave = document.getElementById('btn-save');
 const form = document.getElementById('form-add-client');
 
-const qrUploadArea = document.getElementById('qr-upload-area');
-const qrFileInput = document.getElementById('qr-file-input');
-const qrPreview = document.getElementById('qr-preview');
-const qrPreviewImg = document.getElementById('qr-preview-img');
-const qrClearBtn = document.getElementById('qr-clear-btn');
-const qrResult = document.getElementById('qr-result');
-const qrResultText = document.getElementById('qr-result-text');
+const addressDisplay = document.getElementById('address-display');
+const addressText = document.getElementById('address-text');
 
-const inputAddress = document.getElementById('input-address');
 const inputName = document.getElementById('input-name');
 const inputPhone = document.getElementById('input-phone');
+
+let scannedAddress = '';
 
 // Mostrar botão após carregar o mapa
 function showAddClientButton() {
@@ -1405,9 +1403,22 @@ function showAddClientButton() {
 }
 
 // Abrir modal
-function openModal() {
+async function openModal() {
     modal.classList.add('active');
     document.body.style.overflow = 'hidden';
+
+    // Abrir câmera automaticamente
+    try {
+        await startCamera();
+    } catch (error) {
+        console.error('Erro ao abrir câmera:', error);
+        showToast(
+            'Erro ao abrir câmera',
+            'Verifique as permissões do navegador',
+            'error',
+            5000
+        );
+    }
 }
 
 // Fechar modal
@@ -1420,8 +1431,9 @@ function closeModal() {
 // Resetar formulário
 function resetForm() {
     form.reset();
-    qrResult.classList.remove('active');
-    inputAddress.value = '';
+    addressDisplay.classList.remove('active');
+    addressText.textContent = '';
+    scannedAddress = '';
     stopCamera(); // Parar câmera ao fechar modal
 }
 
@@ -1441,7 +1453,6 @@ modal.addEventListener('click', (e) => {
 // QR CODE SCANNER COM CÂMERA
 // ===========================
 
-const btnStartCamera = document.getElementById('btn-start-camera');
 const btnStopCamera = document.getElementById('btn-stop-camera');
 const btnSwitchCamera = document.getElementById('btn-switch-camera');
 const qrCameraContainer = document.getElementById('qr-camera-container');
@@ -1453,21 +1464,6 @@ let videoStream = null;
 let scanningInterval = null;
 let currentFacingMode = 'environment'; // Começa com câmera traseira
 let lastScannedCode = null;
-
-// Abrir câmera
-btnStartCamera.addEventListener('click', async () => {
-    try {
-        await startCamera();
-    } catch (error) {
-        console.error('Erro ao abrir câmera:', error);
-        showToast(
-            'Erro ao abrir câmera',
-            'Verifique as permissões do navegador',
-            'error',
-            5000
-        );
-    }
-});
 
 // Fechar câmera
 btnStopCamera.addEventListener('click', () => {
@@ -1495,7 +1491,6 @@ async function startCamera() {
         videoStream = await navigator.mediaDevices.getUserMedia(constraints);
         qrVideo.srcObject = videoStream;
 
-        btnStartCamera.classList.add('hidden');
         qrCameraContainer.classList.add('active');
 
         // Aguardar vídeo carregar
@@ -1523,7 +1518,6 @@ function stopCamera() {
 
     qrVideo.srcObject = null;
     qrCameraContainer.classList.remove('active');
-    btnStartCamera.classList.remove('hidden');
     qrStatus.textContent = 'Procurando QR Code...';
     qrStatus.classList.remove('success');
     lastScannedCode = null;
@@ -1594,38 +1588,41 @@ function playBeep() {
 
 // Processar resultado do QR Code
 function handleQRCodeResult(qrData) {
-    // Mostrar resultado bruto
-    qrResultText.textContent = `✓ QR Code lido: ${qrData}`;
-    qrResult.classList.add('active');
+    console.log('Processando QR Code:', qrData);
 
     // Buscar endereço no banco de dados (simulado por enquanto)
     const address = lookupAddress(qrData);
 
     if (address) {
-        inputAddress.value = address;
-        inputAddress.removeAttribute('readonly');
+        // Endereço encontrado - mostrar no badge
+        scannedAddress = address;
+        addressText.textContent = address;
+        addressDisplay.classList.add('active');
+
         showToast(
-            'Endereço encontrado!',
-            'QR Code processado com sucesso',
+            '✓ Endereço encontrado!',
+            'Preencha o nome do cliente',
             'success',
             3000
         );
-
-        // Focar no campo de nome
-        setTimeout(() => {
-            inputName.focus();
-        }, 500);
     } else {
-        // Se não encontrar, permite edição manual
-        inputAddress.value = `Código: ${qrData}\n\n(Endereço não encontrado na base de dados)\n\nDigite o endereço manualmente:`;
-        inputAddress.removeAttribute('readonly');
+        // Endereço não encontrado - mostrar código
+        scannedAddress = `Código QR: ${qrData} (Endereço não cadastrado)`;
+        addressText.textContent = scannedAddress;
+        addressDisplay.classList.add('active');
+
         showToast(
-            'Endereço não encontrado',
-            'Digite o endereço manualmente no campo acima',
+            '⚠️ Endereço não cadastrado',
+            'Preencha manualmente os dados do cliente',
             'warning',
-            5000
+            4000
         );
     }
+
+    // Focar automaticamente no campo de nome
+    setTimeout(() => {
+        inputName.focus();
+    }, 500);
 }
 
 // Buscar endereço no banco de dados
@@ -1646,15 +1643,25 @@ form.addEventListener('submit', async (e) => {
     const clientData = {
         name: inputName.value.trim(),
         phone: inputPhone.value.trim(),
-        address: inputAddress.value.trim(),
+        address: scannedAddress,
         created_at: new Date().toISOString()
     };
 
     // Validação
-    if (!clientData.name || !clientData.address) {
+    if (!clientData.name) {
         showToast(
-            'Campos obrigatórios',
-            'Preencha o nome e endereço do cliente',
+            'Campo obrigatório',
+            'Preencha o nome do cliente',
+            'error',
+            4000
+        );
+        return;
+    }
+
+    if (!clientData.address) {
+        showToast(
+            'Escaneie o QR Code',
+            'É necessário escanear o QR Code do pacote primeiro',
             'error',
             4000
         );
