--- a/index.html
+++ b/index.html
@@ -424,36 +424,24 @@
         transform: scale(1);
     }
 
-    .modal-header {
-        padding: 20px 24px;
-        border-bottom: 1px solid #e0e0e0;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-
-    .modal-title {
-        font-size: 20px;
-        font-weight: 600;
-        color: #333;
-    }
-
     .modal-close {
         width: 32px;
         height: 32px;
         border: none;
-        background: #f5f5f5;
+        background: rgba(255, 255, 255, 0.9);
         border-radius: 50%;
-        font-size: 20px;
+        font-size: 18px;
         cursor: pointer;
         display: flex;
         align-items: center;
         justify-content: center;
         transition: all 0.2s ease;
+        box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+        flex-shrink: 0;
     }
 
     .modal-close:hover {
-        background: #e0e0e0;
+        background: white;
         transform: rotate(90deg);
     }
 
@@ -471,6 +459,9 @@
         font-weight: 600;
         color: #666;
         margin-bottom: 12px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
     }
 
     .qr-camera-container {
@@ -840,16 +831,18 @@
             max-height: 95vh;
         }
 
-        .modal-header {
-            padding: 16px 20px;
-        }
-
-        .modal-title {
-            font-size: 18px;
-        }
-
         .modal-body {
             padding: 20px;
+        }
+
+        .scanner-title {
+            font-size: 13px;
+        }
+
+        .modal-close {
+            width: 28px;
+            height: 28px;
+            font-size: 16px;
         }
 
         .qr-upload-area {
@@ -909,15 +902,13 @@
 <!-- Modal Adicionar Cliente -->
 <div class="modal-overlay" id="modal-add-client">
     <div class="modal-container">
-        <div class="modal-header">
-            <h2 class="modal-title">Adicionar Cliente</h2>
-            <button class="modal-close" id="modal-close">✕</button>
-        </div>
-
         <div class="modal-body">
             <!-- Scanner QR Code -->
             <div class="qr-scanner-section">
-                <div class="scanner-title">📸 Aponte a câmera para o QR Code</div>
+                <div class="scanner-title">
+                    <span>📸 Aponte a câmera para o QR Code</span>
+                    <button class="modal-close" id="modal-close">✕</button>
+                </div>
 
                 <div class="qr-camera-container active" id="qr-camera-container">
                     <video id="qr-video" autoplay playsinline></video>
