--- a/index.html
+++ b/index.html
@@ -467,6 +467,8 @@
     .qr-camera-container {
         position: relative;
         width: 100%;
+        max-width: 400px;
+        margin: 0 auto;
         background: #000;
         border-radius: 12px;
         overflow: hidden;
@@ -480,6 +482,8 @@
     #qr-video {
         width: 100%;
         height: auto;
+        max-height: 300px;
+        object-fit: cover;
         display: block;
     }
 
@@ -492,8 +496,8 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        width: 250px;
-        height: 250px;
+        width: 200px;
+        height: 200px;
         border: 2px solid rgba(255, 255, 255, 0.5);
         border-radius: 12px;
         pointer-events: none;
@@ -563,22 +567,22 @@
 
     .camera-controls {
         position: absolute;
-        bottom: 20px;
+        bottom: 12px;
         left: 50%;
         transform: translateX(-50%);
         display: flex;
-        gap: 12px;
+        gap: 10px;
         z-index: 10;
     }
 
     .camera-btn {
-        width: 48px;
-        height: 48px;
+        width: 40px;
+        height: 40px;
         border-radius: 50%;
         border: none;
         background: rgba(255, 255, 255, 0.9);
         color: #333;
-        font-size: 20px;
+        font-size: 18px;
         cursor: pointer;
         box-shadow: 0 2px 8px rgba(0,0,0,0.3);
         transition: all 0.2s ease;
@@ -640,16 +644,17 @@
 
     .qr-status {
         position: absolute;
-        top: 20px;
+        top: 12px;
         left: 50%;
         transform: translateX(-50%);
         background: rgba(0, 0, 0, 0.7);
         color: white;
-        padding: 8px 16px;
-        border-radius: 20px;
-        font-size: 13px;
+        padding: 6px 12px;
+        border-radius: 16px;
+        font-size: 12px;
         font-weight: 500;
         z-index: 10;
+        white-space: nowrap;
     }
 
     .qr-status.success {
@@ -843,6 +848,19 @@
             width: 28px;
             height: 28px;
             font-size: 16px;
+        }
+
+        .qr-camera-container {
+            max-width: 100%;
+        }
+
+        #qr-video {
+            max-height: 250px;
+        }
+
+        .qr-overlay {
+            width: 180px;
+            height: 180px;
         }
 
         .qr-upload-area {
